--- a/home.css
+++ b/home.css
@@ -1,18 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap");
+
 * {
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 nav {
+  padding: 30px;
+  width: 100vw;
+  height: 200px;
+
   background-image: url("./assets/char-2.png");
-  width: 100%;
-  height: 500px;
-  background-position: center top;
-  background-attachment: fixed;
+  background-color: #3de07e;
+  background-position: center bottom;
+  background-position-y: 130px;
   background-repeat: no-repeat;
-  padding: 10px;
+  background-size: 50%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
+
   & span {
     align-self: flex-start;
   }
@@ -23,5 +31,49 @@ nav {
 }
 
 main {
+  width: 100vw;
+  height: max-content;
+  padding: 30px;
+
   background-color: black;
+
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+
+  color: white;
+}
+
+.card {
+  flex-basis: 22%;
+  padding: 3%;
+
+  display: flex;
+  flex-direction: column;
+
+  & img {
+    width: 100%;
+  }
+  & h3 {
+    padding: 5px 0;
+  }
+  & p {
+    font-size: xx-small;
+    padding: 5px 0;
+  }
+  & button {
+    width: 50%;
+    height: 20px;
+    padding: 0%;
+    margin-top: 5px;
+
+    background-color: #dd3c57;
+
+    border-radius: 5px;
+    border: none;
+
+    font-size: xx-small;
+    color: white;
+  }
 }
