--- a/checkout.css
+++ b/checkout.css
@@ -30,22 +30,24 @@ nav {
   }
 }
 
-.item {
-}
-
 main {
   width: 100vw;
   height: max-content;
   padding: 30px;
 
+  display: flex;
+  flex-direction: column;
   background-color: black;
+
+  color: white;
+}
+
+.container_card {
+  width: 100%;
 
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-
-  color: white;
+  flex-direction: row;
 }
 
 .card {
