--- a/checkout.css
+++ b/checkout.css
@@ -36,25 +36,64 @@ main {
   padding: 30px;
 
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   background-color: black;
 
   color: white;
+
+  & h3 {
+    margin-left: 80px;
+    align-self: flex-start;
+  }
+  & button {
+    align-self: flex-end;
+
+    width: 30%;
+    height: 30px;
+    padding: 0;
+    margin: 15px 78px 10px 10px;
+
+    background-color: #dd3c57;
+
+    border-radius: 5px;
+    border: none;
+
+    color: white;
+  }
 }
 
-.card {
+.card_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.big_card {
+  flex-basis: 36%;
+
   display: flex;
   flex-direction: column;
+
+  background-color: white;
+  padding: 0%;
+  margin: 3%;
+  color: black;
 
   & img {
     width: 100%;
   }
   & h3 {
+    padding: 10px;
     padding: 5px 0;
   }
   & button {
     width: 50%;
     height: 20px;
     padding: 0%;
+    margin: 10px;
     margin-top: 5px;
 
     background-color: #dd3c57;
@@ -67,20 +106,10 @@ main {
   }
 }
 
-.big_card {
-  flex-basis: 36%;
-
-  background-color: white;
-  padding: 0%;
-  margin: 3%;
-  color: black;
-
-  & h3 {
-    padding: 10px;
-  }
-  & button {
-    margin: 10px;
-  }
+table {
+  width: 79%;
+  border: solid white 2px;
+  margin: 20px;
 }
 
 footer {
